--- a/Amozegar/Areas/Teacher/Views/Home/LoginsToClass.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Home/LoginsToClass.cshtml
@@ -7,10 +7,48 @@
 
     @if(Model.Count() > 0)
     {
+
         <!-- Users List -->
         <div class="card border-0 shadow-sm">
             <div class="card-body p-4">
-                <h3 class="card-title mb-4">لیست درخواست ها</h3>
+
+
+                <div class="d-flex gap-3 align-items-center mb-4">
+
+                    <h3 class="card-title mb-0">لیست درخواست ها</h3>
+                    <div>
+                        @if (ViewBag.HasPrev)
+                        {
+                            <a asp-action="LoginsToClass"
+                               asp-controller="Home"
+                               asp-area="Teacher"
+                               asp-route-classId="@ViewBag.ClassId"
+                               asp-route-pageNumber="@(ViewBag.CurrentPage - 1)"
+                               class="btn btn-primary ">صفحه ی قبل</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary disabled">صفحه ی قبل</a>
+                        }
+                    </div>
+
+                    <div>
+                        @if (ViewBag.HasNext)
+                        {
+                            <a asp-action="LoginsToClass"
+                               asp-controller="Home"
+                               asp-area="Teacher"
+                               asp-route-classId="@ViewBag.ClassId"
+                               asp-route-pageNumber="@(ViewBag.CurrentPage + 1)"
+                               class="btn btn-primary ">صفحه ی بعد</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary disabled">صفحه ی بعد</a>
+                        }
+                    </div>
+
+                </div>
 
                 <div class="users-list">
 
