--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -35,21 +35,25 @@
                         <i class="fas fa-tachometer-alt"></i>
                         <span>داشبورد</span>
                     </a>
-                    <a asp-action="LoginsToClass" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" class="menu-item @(ViewBag.Route == "LoginsToClass" ? "active" : "")">
+                    <a asp-action="LoginsToClass" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "LoginsToClass" ? "active" : "")">
                         <i class="fa-solid fa-book-tanakh"></i>
                         <span>درخواست های ورود <partial name="~/Areas/Teacher/Views/PartialsViews/StudentRequestCount.cshtml" model="@ViewBag.classId" /></span>
                     </a>
-                    <a asp-action="StudentsList" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" class="menu-item @(ViewBag.Route == "StudentsList" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Class-Students-List" ? "active" : "")">
                         <i class="fa-solid fa-users"></i>
                         <span>لیست دانش آموزان</span>
                     </a>
-                    <a asp-action="BannedStudentsList" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" class="menu-item @(ViewBag.Route == "BannedStudentsList" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Banned-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Banned-Students-List" ? "active" : "")">
                         <i class="fa-solid fa-users-slash"></i>
                         <span>لیست دانش آموزان مسدود شده</span>
                     </a>
-                    <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
-                        <i class="fas fa-key"></i>
-                        <span>تکالیف</span>
+                    <a asp-action="Notifications" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Notifications" ? "active" : "")">
+                        <i class="fa-solid fa-message"></i>
+                        <span>کنترل اعلانات</span>
+                    </a>
+                    <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ShowNotifications" ? "active" : "")">
+                        <i class="fa-solid fa-message"></i>
+                        <span>اعلانات</span>
                     </a>
                     <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
                         <i class="fas fa-key"></i>
@@ -71,7 +75,7 @@
         <main class="main-content">
             <div class="container-fluid py-4">
 
-                <partial name="~/Areas/PartialViews/ClassDetails.cshtml" model="@ViewBag.classId" />
+                <partial name="~/Areas/Shared/PartialViews/ClassDetails.cshtml" model="@ViewBag.classId" />
 
                 @RenderBody()
             </div>
