--- a/Amozegar/Areas/Teacher/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Teacher/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Amozegar.Areas.Teacher.Models
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Identity
+@using Amozegar.Areas.Shared.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
