--- a/Amozegar/Areas/Teacher/Views/Notifications/Index.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Notifications/Index.cshtml
@@ -16,6 +16,7 @@
                    asp-controller="Home"
                    asp-area="Teacher"
                    asp-route-classId="@ViewBag.ClassId"
+                   asp-route-pageNumber="1"
                    class="btn btn-primary">برگشت به اعلانات</a>
             </div>
         </div>
