--- a/Amozegar/Areas/Panel/Views/Home/Classes.cshtml
+++ b/Amozegar/Areas/Panel/Views/Home/Classes.cshtml
@@ -11,7 +11,43 @@
 	<div class="card border-0 shadow-sm">
 		<div class="card-body p-4">
 			<div class="d-flex justify-content-between align-items-center mb-4">
-				<h3 class="card-title mb-0">کلاس‌های من</h3>
+
+				<div class="d-flex gap-2">
+					<h3 class="card-title mb-0">کلاس‌های من</h3>
+
+					<div>
+						@if (ViewBag.HasPrev)
+						{
+							<a asp-action="Classes"
+							   asp-controller="Home"
+							   asp-area="Panel"
+							   asp-route-classId="@ViewBag.ClassId"
+							   asp-route-pageNumber="@(ViewBag.CurrentPage - 1)"
+							   class="btn btn-primary ">صفحه ی قبل</a>
+						}
+						else
+						{
+							<a class="btn btn-primary disabled">صفحه ی قبل</a>
+						}
+					</div>
+
+					<div>
+						@if (ViewBag.HasNext)
+						{
+							<a asp-action="Classes"
+							   asp-controller="Home"
+							   asp-area="Panel"
+							   asp-route-classId="@ViewBag.ClassId"
+							   asp-route-pageNumber="@(ViewBag.CurrentPage + 1)"
+							   class="btn btn-primary ">صفحه ی بعد</a>
+						}
+						else
+						{
+							<a class="btn btn-primary disabled">صفحه ی بعد</a>
+						}
+					</div>
+				</div>
+
 				@if(ViewBag.Role == "Teacher")
 				{
 					<a asp-action="AddClass" asp-controller="Classes" asp-area="Teacher" class="btn btn-primary">
@@ -39,6 +75,9 @@
 				}
 				else
 				{
+					<div class="alert alert-light">
+						تعداد کل کلاس ها: @ViewBag.ClassesCount
+					</div>
 					foreach(var item in Model)
 					{
 						<div class="class-item @(item.ClassState != "Accepted" && ViewBag.Role != "Teacher" ? "bg-light" : "")">
