--- a/Amozegar/Areas/Teacher/Views/Classes/EditClass.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Classes/EditClass.cshtml
@@ -69,6 +69,7 @@
 			asp-controller="Home"
 			asp-area="Panel"
 			asp-route-roleName="Teacher"
+			asp-route-pageNumber = "1"
 			   class="btn btn-danger px-4">لغو</a>
 			<button type="submit" class="btn btn-primary px-4">
 				<i class="fas fa-save me-2"></i>
