--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             </div>
 
             <div class="sidebar-footer">
-                <a class="menu-item text-danger" asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Teacher">
+                <a class="menu-item text-danger" asp-action="Classes" asp-controller="Home" asp-area="Panel" asp-route-roleName="Teacher" asp-route-pageNumber="1">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>خروج از کلاس</span>
                 </a>
