--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     </a>
                     <a asp-action="LoginsToClass" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "LoginsToClass" ? "active" : "")">
                         <i class="fa-solid fa-book-tanakh"></i>
-                        <span>درخواست های ورود <partial name="~/Areas/Teacher/Views/PartialsViews/StudentRequestCount.cshtml" model="@ViewBag.classId" /></span>
+                        <span>درخواست های ورود @await Component.InvokeAsync("NotReadComponent", new { type = "Students", classIdentity = ViewBag.ClassId })</span>
                     </a>
                     <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Class-Students-List" ? "active" : "")">
                         <i class="fa-solid fa-users"></i>
@@ -53,7 +53,7 @@
                     </a>
                     <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ShowNotifications" ? "active" : "")">
                         <i class="fa-solid fa-message"></i>
-                        <span>اعلانات</span>
+                        <span>اعلانات @await Component.InvokeAsync("NotReadComponent", new { type = "Notifications" })</span>
                     </a>
                     <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "ChangePassword" ? "active" : "")">
                         <i class="fas fa-key"></i>
@@ -75,7 +75,7 @@
         <main class="main-content">
             <div class="container-fluid py-4">
 
-                <partial name="~/Areas/Shared/PartialViews/ClassDetails.cshtml" model="@ViewBag.classId" />
+                <partial name="~/Areas/Shared/PartialViews/_ClassDetails.cshtml" model="@ViewBag.classId" />
 
                 @RenderBody()
             </div>
