Fixed Many Bugs

--- a/Amozegar/Areas/Student/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Student/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     </a>
                     <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Student" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ShowNotifications" ? "active" : "")">
                         <i class="fa-solid fa-message"></i>
-                        <span>اعلانات @await Component.InvokeAsync("NotReadComponent", new { type = "Notifications" })</span>
+                        <span>اعلانات @await Component.InvokeAsync("NotReadComponent", new { type = "Notifications", classIdentity = ViewBag.ClassId })</span>
                     </a>
                     <a asp-action="" asp-controller="Home" asp-area="Teacher" class="menu-item @(ViewBag.Route == "Edit" ? "active" : "")">
                         <i class="fas fa-user-edit"></i>
