--- a/Amozegar/Areas/Student/Views/_ViewImports.cshtml
+++ b/Amozegar/Areas/Student/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Amozegar
 @using Amozegar.Models
 @using Amozegar.Areas.Student.Models
+@using Amozegar.Areas.Shared.Models
 @using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
