--- a/Amozegar/Areas/Shared/Views/Students/Index.cshtml
+++ b/Amozegar/Areas/Shared/Views/Students/Index.cshtml
@@ -10,7 +10,7 @@ else
 {
 	<div class="alert alert-light">
 
-		<p class="d-inline">@(ViewBag.Route == "Banned-Students-List" ? "تعداد دانش آموزان مسدود شده" : "تعداد دانش آموزان")</p>
+		<p class="d-inline">@(ViewBag.Type == "Banned-Students-List" ? "تعداد دانش آموزان مسدود شده" : "تعداد دانش آموزان")</p>
 		@ViewBag.Count
 
 	</div>
@@ -31,7 +31,7 @@ else
 						   asp-route-classId="@ViewBag.ClassId"
 						   asp-route-pageNumber="@(ViewBag.CurrentPage - 1)"
 						   asp-route-roleName="@ViewBag.roleName"
-						   asp-route-type="@ViewBag.Route"
+						   asp-route-type="@ViewBag.Type"
 						   class="btn btn-primary ">صفحه ی قبل</a>
 					}
 					else
@@ -49,7 +49,7 @@ else
 						   asp-route-classId="@ViewBag.ClassId"
 						   asp-route-pageNumber="@(ViewBag.CurrentPage + 1)"
 						   asp-route-roleName="@ViewBag.roleName"
-						   asp-route-type="@ViewBag.Route"
+						   asp-route-type="@ViewBag.Type"
 						   class="btn btn-primary ">صفحه ی بعد</a>
 					}
 					else
@@ -66,7 +66,7 @@ else
 						<tr>
 							<th scope="col" style="width: 80px">تصویر</th>
 							<th scope="col">نام</th>
-							@if (ViewBag.Route != "Students-List")
+							@if (ViewBag.Type != "Students-List")
 							{
 								<th scope="col">ایمیل</th>
 								<th scope="col" style="width: 120px">عملیات ها</th>
@@ -88,14 +88,14 @@ else
 								</td>
 								<td>@student.StudentFullName</td>
 
-								@if (ViewBag.Route != "Students-List")
+								@if (ViewBag.Type != "Students-List")
 								{
 									<td>@student.StudentEmail</td>
 									<td>
 
 										<div class="d-flex gap-2 justify-content-between align-items-center">
 
-											@if (ViewBag.Route == "Banned-Students-List")
+											@if (ViewBag.Type == "Banned-Students-List")
 											{
 											<a asp-action="UnBan"
 											   asp-controller="Students"
