--- a/Amozegar/Areas/Student/Views/Homeworks/Send.cshtml
+++ b/Amozegar/Areas/Student/Views/Homeworks/Send.cshtml
@@ -1,6 +1,6 @@
-﻿@model AddOrEditHomeworkViewModel
+﻿@model SendHomeworkViewModel
 @{
-    ViewData["Title"] = "افزودن تکلیف";
+    ViewData["Title"] = "ارسال تکلیف";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,12 +12,14 @@
                 <div class="card shadow-lg border-0">
                     <div class="card-body p-5">
                         <div class="text-center mb-5">
-                            <h2 class="fw-bold">ایجاد تکلیف در کلاس</h2>
-                            <p class="text-muted">با گذاشتن تکلیف دانش آموزان خود را به چالش بکشید</p>
+                            <h2 class="fw-bold">تکلیف خود را ارسال کنید</h2>
+                            <p class="text-muted">عنوان تکلیف : @Model.HomeworkTitle</p>
+                            <p class="text-muted">لطفا عکس های تکلیف حل شده را وارد کنید</p>
                         </div>
-
                         <form method="post" novalidate enctype="multipart/form-data">
                             @Html.AntiForgeryToken()
+                            @Html.HiddenFor(h => h.HomeworkId)
+
                             <div class="mb-4">
                                 <label asp-for="@Model.Title" class="form-label"></label>
                                 <div class="input-group">
@@ -53,19 +55,17 @@
                                 <span class="small text-danger" asp-validation-for="@Model.Pictures"></span>
                             </div>
 
-
-
                             <div class="mb-4 d-flex ">
                                 <a asp-action="Index"
                                    asp-controller="Homeworks"
                                    asp-area="Shared"
                                    asp-route-classId="@ViewBag.ClassId"
-                                   asp-route-roleName="Teacher"
+                                   asp-route-roleName="Student"
                                    asp-route-pageNumber="1"
                                    class="btn btn-warning w-50 py-3 d-block rounded-end-0">برگشت به تکالیف</a>
                                 <button type="submit" class="btn btn-primary w-50 py-3 d-block rounded-start-0">
                                     <i class="fas fa-edit me-2"></i>
-                                    ثبت
+                                    ارسال
                                 </button>
                             </div>
 
