--- a/Amozegar/Areas/Teacher/Views/Homeworks/AddPicture.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Homeworks/AddPicture.cshtml
@@ -31,11 +31,12 @@
                             </div>
 
                             <div class="mb-4 d-flex ">
-                                <a asp-action="EditHomework"
+                                <a asp-action="Index"
                                    asp-controller="Homeworks"
-                                   asp-area="Teacher"
+                                   asp-area="Shared"
                                    asp-route-classId="@ViewBag.ClassId"
-                                   asp-route-homeworkId="@ViewBag.HomeworkId"
+                                   asp-route-roleName="Teacher"
+                                   asp-route-pageNumber="1"
                                    class="btn btn-warning w-50 py-3 d-block rounded-end-0">برگشت به تکلیف</a>
                                 <button type="submit" class="btn btn-primary w-50 py-3 d-block rounded-start-0">
                                     <i class="fas fa-edit me-2"></i>
