--- a/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
+++ b/Amozegar/Areas/Teacher/Views/Shared/_Layout.cshtml
@@ -39,25 +39,29 @@
                         <i class="fa-solid fa-book-tanakh"></i>
                         <span>درخواست های ورود @await Component.InvokeAsync("NotReadComponent", new { type = "Students", classIdentity = ViewBag.ClassId })</span>
                     </a>
-                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Class-Students-List" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Class-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Class-Students-List" ? "active" : "")">
                         <i class="fa-solid fa-users"></i>
                         <span>لیست دانش آموزان</span>
                     </a>
-                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Banned-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Banned-Students-List" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Students" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-type="Banned-Students-List" asp-route-pageNumber="1" class="menu-item @(ViewBag.Type == "Banned-Students-List" ? "active" : "")">
                         <i class="fa-solid fa-users-slash"></i>
                         <span>لیست دانش آموزان مسدود شده</span>
                     </a>
-                    <a asp-action="Notifications" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Notifications" ? "active" : "")">
+                    <a asp-action="Notifications" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ControlNotifications" ? "active" : "")">
                         <i class="fa-solid fa-message"></i>
                         <span>کنترل اعلانات</span>
                     </a>
-                    <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "ShowNotifications" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Notifications" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Notifications" ? "active" : "")">
                         <i class="fa-solid fa-message"></i>
                         <span>اعلانات @await Component.InvokeAsync("NotReadComponent", new { type = "Notifications", classIdentity = ViewBag.ClassId })</span>
                     </a>
-                    <a asp-action="Homeworks" asp-controller="Home" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Homeworks" ? "active" : "")">
+                    <a asp-action="Index" asp-controller="Homeworks" asp-area="Shared" asp-route-classId="@ViewBag.ClassId" asp-route-roleName="Teacher" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "Homeworks" ? "active" : "")">
                         <i class="fa-solid fa-pen"></i>
                         <span>تکالیف</span>
+                    </a>
+                    <a asp-action="HomeworksSent" asp-controller="Homeworks" asp-area="Teacher" asp-route-classId="@ViewBag.ClassId" asp-route-pageNumber="1" class="menu-item @(ViewBag.Route == "HomeworksSent" ? "active" : "")">
+                        <i class="fa-solid fa-pen-to-square"></i>
+                        <span>تکالیف انجام شده @await Component.InvokeAsync("NotReadComponent", new { type = "HomeworksSent", classIdentity = ViewBag.ClassId })</span>
                     </a>
 
                 </nav>
